HTML & CSS code for new mobile-size table visualization

--- a/configura.html
+++ b/configura.html
@@ -2566,34 +2566,42 @@
               <div class="col-2 d-none d-md-block border-bottom"></div>
               <div class="col-md-9 d-flex">
                   <div class="row w-100">
-                    <div class="col-12 col-sm-6 border-bottom conference-col">
+                    <div class="col-6 border-bottom conference-col">
                         <h3 class="model-name">BEAKTOR Conference</h3>
                     </div>
-                    <div class="col-12 col-sm-6 border-bottom work-col">
+                    <div class="col-6 border-bottom work-col">
                         <h3 class="model-name">BEAKTOR Work</h3>
                     </div>
                   </div>
               </div>
               <div class="col-1"></div>
           </div>
-          <div id="table-iluminacion" class="row table-row">
+          
+		  <div id="table-iluminacion" class="row table-row">
+			<!-- Tablet up -->
             <div class="col-2 d-none d-md-block border-bottom">
-              <span class="row-name iluminacion">Iluminación</span>
-            </div>
-            <div class="col-md-9 d-flex">
-                <div class="row w-100">
-                    <div class="col-12 col-sm-6 border-bottom conference-col">
-                        <span class="d-block d-md-none row-name iluminacion">Iluminación</span>
-                        <p>2 iluminaciones con panel táctil</p>
+              <h4 class="row-name iluminacion">Iluminación</h4>
+			</div>
+			<!-- / -->
+            <div class="col-md-9">
+				<!-- Tablet portrait down -->
+				<div class="row d-md-none header-row">
+					<div class="col-12">
+						<h4 class="border-bottom row-name iluminacion">Iluminación</h4>
+					</div>
+				</div>
+				<!-- / -->
+                <div class="row">
+                    <div class="col-6 border-bottom conference-col">
+                        <p class="d-none d-sm-block">2 iluminaciones con panel táctil</p>
                         <ul class="feat-list">
                             <li>Lámpara LED para trabajo</li>
                             <li>Iluminación para videollamada</li>
                             <li>Lámpara LED de ambiente</li>
                         </ul>
                     </div>
-                    <div class="col-12 col-sm-6 border-bottom work-col">
-                        <span class="d-block d-md-none row-name iluminacion">Iluminación</span>
-                        <p>2 iluminaciones con panel táctil</p>
+                    <div class="col-6 border-bottom work-col">
+                        <p class="d-none d-sm-block">2 iluminaciones con panel táctil</p>
                         <ul class="feat-list">
                             <li>Lámpara LED para trabajo</li>
                             <li>Lámpara LED de ambiente</li>
@@ -2605,21 +2613,28 @@
           </div>
 
           <div id="table-conexiones" class="row table-row">
+			<!--- Tablet up -->
             <div class="col-2 d-none d-md-block border-bottom">
-              <span class="row-name conexiones">Conexiones</span>
-            </div>
-            <div class="col-md-9 d-flex">
-                <div class="row w-100">
-                    <div class="col-12 col-sm-6 border-bottom conference-col">
-                        <span class="d-block d-md-none row-name conexiones">Conexiones</span>
+              <h4 class="row-name conexiones">Conexiones</h4>
+			</div>
+			<!-- / -->
+            <div class="col-md-9">
+				<!-- Tablet portrait down -->
+				<div class="row d-md-none header-row">
+					<div class="col-12">
+						<h4 class="border-bottom row-name conexiones">Conexiones</h4>
+					</div>
+				</div>
+				<!--- / -->
+                <div class="row">
+                    <div class="col-6 border-bottom conference-col">
                         <ul class="feat-list">
                             <li>2 Tomas de corriente tipo-E</li>
                             <li>1 Puerto USB</li>
                             <li>1 Puerto USB-C</li>
                         </ul>
                     </div>
-                    <div class="col-12 col-sm-6 border-bottom work-col">
-                        <span class="d-block d-md-none row-name conexiones">Conexiones</span>
+                    <div class="col-6 border-bottom work-col">
                         <ul class="feat-list">
                             <li>2 Tomas de corriente tipo-E</li>
                         </ul>
@@ -2630,13 +2645,21 @@
 		  </div>
 
           <div id="table-colores" class="row table-row">
+			<!-- Tablet up -->
             <div class="col-2 d-none d-md-block border-bottom">
               <span class="row-name colores">Colores disponibles</span>
-            </div>
-            <div class="col-md-9 d-flex">
-                <div class="row w-100">
-                    <div class="col-12 col-sm-6 border-bottom conference-col">
-                        <span class="d-block d-md-none row-name colores">Colores disponibles</span>
+			</div>
+			<!-- / -->
+            <div class="col-md-9">
+				<!-- Tablet portrait down -->
+				<div class="row d-md-none">
+					<div class="col-12">
+						<h4 class="border-bottom row-name colores">Colores</h4>
+					</div>
+				</div>
+				<!-- / -->
+                <div class="row">
+                    <div class="col-6 border-bottom conference-col">
                         <div class="row position-relative">
 							<a tabindex="0" class="swatch color-swatch blue color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                             <a tabindex="0" class="swatch color-swatch pink color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
@@ -2644,8 +2667,7 @@
                             <a tabindex="0" class="swatch color-swatch grey color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 border-bottom work-col">
-                        <span class="d-block d-md-none row-name colores">Colores disponibles</span>
+                    <div class="col-6 border-bottom work-col">
                         <div class="row">
 							<a tabindex="0" class="swatch color-swatch blue color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                             <a tabindex="0" class="swatch color-swatch grey color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
@@ -2657,13 +2679,21 @@
           </div>
 
           <div id="table-materiales" class="row table-row">
+			<!-- Tablet up -->  
             <div class="col-2 d-none d-md-block border-bottom">
-              <span class="row-name materiales">Materiales</span>
-            </div>
-            <div class="col-md-9 d-flex">
-                <div class="row w-100">
-                    <div class="col-12 col-sm-6 border-bottom conference-col">
-                        <span class="d-block d-md-none row-name materiales">Materiales</span>
+              <h4 class="row-name materiales">Materiales</h4>
+			</div>
+			<!-- / -->
+            <div class="col-md-9">
+				<!-- Tablet portrait down -->
+				<div class="row d-md-none">
+					<div class="col-12">
+						<h4 class="border-bottom row-name materiales">Materiales</h4>
+					</div>
+				</div>
+				<!-- / -->
+                <div class="row">
+                    <div class="col-6 border-bottom conference-col">
                         <div class="row">
 							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
 								<img src="assets/img/muestra_madera.png" alt="muestra-madera">
@@ -2674,8 +2704,7 @@
 							<a tabindex="0" class="swatch mat-swatch green color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 border-bottom work-col">
-                        <span class="d-block d-md-none row-name materiales">Materiales</span>
+                    <div class="col-6 border-bottom work-col">
                         <div class="row">
 							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
                                 <img src="assets/img/muestra_madera.png" alt="muestra-madera">
@@ -2692,13 +2721,21 @@
           </div>
 
           <div id="table-dimensiones" class="row table-row">
+			<!-- Tablet up -->
             <div class="col-2 d-none d-md-block">
-              <span class="row-name dimensiones">Dimensiones y peso</span>
-            </div>
-            <div class="col-md-9 d-flex">
-                <div class="row w-100">
-                    <div class="col-12 col-sm-6 conference-col">
-                        <span class="d-block d-md-none row-name dimensiones">Dimensiones y peso</span>
+              <h4 class="row-name dimensiones">Dimensiones y peso</h4>
+			</div>
+			<!-- / -->
+            <div class="col-md-9">
+				<!-- Tablet portrait down -->
+				<div class="row d-md-none">
+					<div class="col-12">
+						<h4 class="border-bottom row-name dimensiones">Dimensiones y peso</h4>
+					</div>
+				</div>
+				<!-- / -->
+                <div class="row">
+                    <div class="col-6 conference-col">
                         <ul class="feat-list">
                             <li><strong>Alto:</strong> 155,6 cm</li>
                             <li><strong>Ancho:</strong> 105 cm</li>
@@ -2706,8 +2743,7 @@
                             <li><strong>Peso:</strong> 39,5 kg</li>
                         </ul>
                     </div>
-                    <div class="col-12 col-sm-6 work-col">
-                        <span class="d-block d-md-none row-name dimensiones">Dimensiones y peso</span>
+                    <div class="col-6 work-col">
                         <ul class="feat-list">
                             <li><strong>Alto:</strong> 155,6 cm</li>
                             <li><strong>Ancho:</strong> 105 cm</li>
@@ -2724,15 +2760,17 @@
             <div class="col-2"></div>
             <div class="col-md-9 d-flex">
                 <div class="row w-100">
-                    <div class="col-12 col-sm-6 conference-col">
-                        <div class="img-wrapper cotas">
-                            <img src="assets/img/vec/cotas_conference.svg" alt="cotas-conference">
-                        </div>
+                    <div class="col-6 d-flex justify-content-center justify-content-sm-start conference-col">
+						<img class="left-prof" src="assets/img/vec/cotas_conference-left-prof.svg" alt="beaktor-cotas-conference-perfil-izquierdo">
+						<img class="front" src="assets/img/vec/cotas_conference-front.svg" alt="beaktor-cotas-conference-frontal">
+						<img class="d-none d-sm-inline right-prof" src="assets/img/vec/cotas_conference-right-prof-alt.svg" alt="beaktor-cotas-conference-perfil-derecho">
+						<img class="d-sm-none right-prof" src="assets/img/vec/cotas_conference-right-prof.svg" alt="beaktor-cotas-conference-perfil-derecho">
                     </div>
-                    <div class="col-12 col-sm-6 work-col">
-                        <div class="img-wrapper cotas">
-                            <img src="assets/img/vec/cotas_work.svg" alt="cotas-work">
-                        </div>
+                    <div class="col-6 d-flex justify-content-center justify-content-sm-start work-col">
+						<img class="left-prof" src="assets/img/vec/cotas_conference-left-prof.svg" alt="beaktor-cotas-work-perfil-izquierdo">
+						<img class="front" src="assets/img/vec/cotas_conference-front.svg" alt="beaktor-cotas-work-frontal">
+						<img class="d-none d-sm-inline right-prof" src="assets/img/vec/cotas_conference-right-prof-alt.svg" alt="beaktor-cotas-work-perfil-derecho">
+						<img class="d-sm-none right-prof" src="assets/img/vec/cotas_conference-right-prof.svg" alt="beaktor-cotas-work-perfil-derecho">
                     </div>
                 </div>
             </div>
@@ -2743,12 +2781,12 @@
             <div class="col-2"></div>
             <div class="col-md-9 d-flex">
                 <div class="row w-100">
-                    <div class="col-12 col-sm-6 conference-col">
+                    <div class="col-6 conference-col">
                         <div class="btn-wrapper">
                             <a href="#"><button>Comprar</button></a>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 work-col">
+                    <div class="col-6 work-col">
                         <div class="btn-wrapper">
                             <a href="#"><button>Comprar</button></a>
                         </div>
