Solves swatch tooltips positioning issue

--- a/configura.html
+++ b/configura.html
@@ -105,7 +105,7 @@
 						<div class="col-12 col-sm-9 m-auto">
 							<div class="img-wrapper text-center position-relative">
 								<svg version="1.1" id="cotas-indicadores" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-						viewBox="0 0 524 568.2" style="enable-background:new 0 0 524 568.2;" xml:space="preserve">
+						viewBox="0 0 524 568.2" style="enable-background:new 0 0 524 568.2" xml:space="preserve">
 									<style type="text/css">
 										.main-path{fill:#AEADAD;}
 										.plus-icon{fill:#FFD100; cursor: pointer;}
@@ -2699,24 +2699,24 @@
                 <div class="row">
                     <div class="col-6 border-bottom conference-col">
                         <div class="row">
-							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
 								<img src="assets/img/muestra_madera.png" alt="muestra-madera">
 							</a>
-							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
 							  <img src="assets/img/muestra_forbo.png" alt="muestra-forbo">
 							</a>
-							<a tabindex="0" class="swatch mat-swatch green color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+							<a tabindex="0" class="swatch mat-swatch green color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
                     <div class="col-6 border-bottom work-col">
                         <div class="row">
-							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
                                 <img src="assets/img/muestra_madera.png" alt="muestra-madera">
 							</a>
-                            <a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+                            <a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
 								<img src="assets/img/muestra_forbo.png" alt="muestra-forbo">
 							</a>
-							<a tabindex="0" class="swatch mat-swatch grey color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+							<a tabindex="0" class="swatch mat-swatch grey color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
                 </div>
