Simplifies & optimizes animations script

--- a/configura.html
+++ b/configura.html
@@ -75,23 +75,23 @@
   </header>
 
   <section id="first-container" class="container">
-      <section id="cotas" class="row-wrapper">
+      <section id="cotas" class="row-wrapper will-animate">
         <div class="col-12 col-xl-9 m-auto">
             <div class="row">
-                <div class="col-3 order-sm-1 position-relative profile-col">
-                    <div id="left-profile" class="img-wrapper position-absolute">
+                <div class="col-3 position-relative profile-col">
+                    <div id="left-profile" class="position-absolute img-wrapper will-animate">
                         <img src="assets/img/vec/beaktor_perfil1.svg" alt="perfil-izquierdo-beaktor">
                     </div>
 				</div>
 				
-				<div class="col-6 order-sm-2">
-					<div id="front-profile" class="img-wrapper text-center">
+				<div class="col-6">
+					<div id="front-profile" class="text-center img-wrapper will-animate">
 						<img src="assets/img/vec/beaktor_central.svg" alt="frontal-beaktor">
 					</div>
 				  </div>
                 
-                <div class="col-3 order-sm-3 position-relative profile-col">
-                    <div id="right-profile" class="img-wrapper position-absolute">
+                <div class="col-3 position-relative profile-col">
+                    <div id="right-profile" class="position-absolute img-wrapper will-animate">
                         <img src="assets/img/vec/beaktor_perfil2.svg" alt="perfil-derecho-beaktor">
                     </div>
                 </div>
@@ -104,7 +104,7 @@
 					<div class="row">
 						<div class="col-12 col-sm-9 m-auto">
 							<div class="img-wrapper text-center position-relative">
-								<svg version="1.1" id="cotas-indicadores" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								<svg version="1.1" id="cotas-indicadores" class="will-animate" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 						viewBox="0 0 524 568.2" style="enable-background:new 0 0 524 568.2" xml:space="preserve">
 									<style type="text/css">
 										.main-path{fill:#AEADAD;}
@@ -2553,11 +2553,11 @@
                     </div>
                   </div>
                   <div class="row">
-                      <div id="animate-container" class="col-9 col-sm-6 m-auto d-flex">
+                      <div id="animate-container" class="col-9 col-sm-6 m-auto d-flex to-animate">
                           <div class="img-wrapper">
-							  <img class="w-100 beaktor front" src="assets/img/beaktor_conference.png" alt="beaktor-conference">
-							  <img class="w-100 beaktor null" src="assets/img/beaktor_conference.png">
-                              <img class="w-100 beaktor back" src="assets/img/beaktor_work.png" alt="beaktor-work">
+							  <img class="w-100 beaktor front to-animate" src="assets/img/beaktor_conference.png" alt="beaktor-conference">
+							  <img class="w-100 beaktor null to-animate" src="assets/img/beaktor_conference.png">
+                              <img class="w-100 beaktor back to-animate" src="assets/img/beaktor_work.png" alt="beaktor-work">
 						  </div>
 					  </div>
 				  </div>
