--- a/legal.html
+++ b/legal.html
@@ -111,8 +111,8 @@
     <div class="container">
       <div class="row">
         <div class="col text-center">
-          <a href="#">
-            <img class="back-up" src="assets/img/vec/arrow_up.svg" alt="volver-arriba">
+          <a id="scroll-up" href="#">
+            <img src="assets/img/vec/arrow_up.svg" alt="volver-arriba">
           </a>
         </div>
       </div>
@@ -194,12 +194,13 @@
   </footer>
   
 <!-- jQuery-->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   
 <!-- Bootstrap JS -->
   <script src="assets/js/bootstrap.bundle.min.js"></script>
 
 <!-- Custom JS -->
   <script src="assets/js/scripts.js"></script>
+
 </body>
 </html>
