--- a/configura.html
+++ b/configura.html
@@ -2555,9 +2555,9 @@
                   <div class="row">
                       <div id="animate-container" class="col-9 col-sm-6 m-auto d-flex to-animate">
                           <div class="img-wrapper">
-							  <img class="w-100 beaktor front to-animate" src="assets/img/beaktor_conference.png" alt="beaktor-conference">
-							  <img class="w-100 beaktor null to-animate" src="assets/img/beaktor_conference.png">
-                              <img class="w-100 beaktor back to-animate" src="assets/img/beaktor_work.png" alt="beaktor-work">
+							  <img class="w-100 front to-animate" src="assets/img/beaktor_conference.png" alt="beaktor-conference">
+							  <img class="w-100 null to-animate" src="assets/img/beaktor_conference.png">
+                              <img class="w-100 back to-animate" src="assets/img/beaktor_work.png" alt="beaktor-work">
 						  </div>
 					  </div>
 				  </div>
@@ -2570,10 +2570,10 @@
               <div class="col-2 d-none d-md-block border-bottom"></div>
               <div class="col-md-9 d-flex">
                   <div class="row w-100">
-                    <div class="col-6 border-bottom conference-col">
+                    <div class="col-6 border-bottom">
                         <h3 class="model-name">BEAKTOR Conference</h3>
                     </div>
-                    <div class="col-6 border-bottom work-col">
+                    <div class="col-6 border-bottom">
                         <h3 class="model-name">BEAKTOR Work</h3>
                     </div>
                   </div>
@@ -2596,7 +2596,7 @@
 				</div>
 				<!-- / -->
                 <div class="row">
-                    <div class="col-6 border-bottom conference-col">
+                    <div class="col-6 border-bottom">
                         <p class="d-none d-sm-block">2 iluminaciones con panel táctil</p>
                         <ul class="feat-list">
                             <li>Lámpara LED para trabajo</li>
@@ -2604,7 +2604,7 @@
                             <li>Lámpara LED de ambiente</li>
                         </ul>
                     </div>
-                    <div class="col-6 border-bottom work-col">
+                    <div class="col-6 border-bottom">
                         <p class="d-none d-sm-block">2 iluminaciones con panel táctil</p>
                         <ul class="feat-list">
                             <li>Lámpara LED para trabajo</li>
@@ -2631,14 +2631,14 @@
 				</div>
 				<!--- / -->
                 <div class="row">
-                    <div class="col-6 border-bottom conference-col">
+                    <div class="col-6 border-bottom">
                         <ul class="feat-list">
                             <li>2 Tomas de corriente tipo-E</li>
                             <li>1 Puerto USB</li>
                             <li>1 Puerto USB-C</li>
                         </ul>
                     </div>
-                    <div class="col-6 border-bottom work-col">
+                    <div class="col-6 border-bottom">
                         <ul class="feat-list">
                             <li>2 Tomas de corriente tipo-E</li>
                         </ul>
@@ -2663,7 +2663,7 @@
 				</div>
 				<!-- / -->
                 <div class="row">
-                    <div class="col-6 border-bottom conference-col">
+                    <div class="col-6 border-bottom">
                         <div class="row position-relative">
 							<a tabindex="0" class="swatch color-swatch blue color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                             <a tabindex="0" class="swatch color-swatch pink color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
@@ -2671,7 +2671,7 @@
                             <a tabindex="0" class="swatch color-swatch grey color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
-                    <div class="col-6 border-bottom work-col">
+                    <div class="col-6 border-bottom">
                         <div class="row">
 							<a tabindex="0" class="swatch color-swatch blue color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                             <a tabindex="0" class="swatch color-swatch grey color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
@@ -2697,24 +2697,24 @@
 				</div>
 				<!-- / -->
                 <div class="row">
-                    <div class="col-6 border-bottom conference-col">
+                    <div class="col-6 border-bottom">
                         <div class="row">
 							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
-								<img src="assets/img/muestra_madera.png" alt="muestra-madera">
+								<img class="w-100" src="assets/img/muestra_madera.png" alt="muestra-madera">
 							</a>
 							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
-							  <img src="assets/img/muestra_forbo.png" alt="muestra-forbo">
+							  <img class="w-100" src="assets/img/muestra_forbo.png" alt="muestra-forbo">
 							</a>
 							<a tabindex="0" class="swatch mat-swatch green color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
-                    <div class="col-6 border-bottom work-col">
+                    <div class="col-6 border-bottom">
                         <div class="row">
 							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
-                                <img src="assets/img/muestra_madera.png" alt="muestra-madera">
+                                <img class="w-100" src="assets/img/muestra_madera.png" alt="muestra-madera">
 							</a>
                             <a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
-								<img src="assets/img/muestra_forbo.png" alt="muestra-forbo">
+								<img class="w-100" src="assets/img/muestra_forbo.png" alt="muestra-forbo">
 							</a>
 							<a tabindex="0" class="swatch mat-swatch grey color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
@@ -2739,7 +2739,7 @@
 				</div>
 				<!-- / -->
                 <div class="row">
-                    <div class="col-6 conference-col">
+                    <div class="col-6">
                         <ul class="feat-list">
                             <li><strong>Alto:</strong> 155,6 cm</li>
                             <li><strong>Ancho:</strong> 105 cm</li>
@@ -2747,7 +2747,7 @@
                             <li><strong>Peso:</strong> 39,5 kg</li>
                         </ul>
                     </div>
-                    <div class="col-6 work-col">
+                    <div class="col-6">
                         <ul class="feat-list">
                             <li><strong>Alto:</strong> 155,6 cm</li>
                             <li><strong>Ancho:</strong> 105 cm</li>
@@ -2764,13 +2764,13 @@
             <div class="col-2"></div>
             <div class="col-md-9 d-flex">
                 <div class="row w-100">
-                    <div class="col-6 d-flex justify-content-center justify-content-sm-start conference-col">
+                    <div class="col-6 d-flex justify-content-center justify-content-sm-start">
 						<img class="left-prof" src="assets/img/vec/cotas_conference-left-prof.svg" alt="beaktor-cotas-conference-perfil-izquierdo">
 						<img class="front" src="assets/img/vec/cotas_conference-front.svg" alt="beaktor-cotas-conference-frontal">
 						<img class="d-none d-sm-inline right-prof" src="assets/img/vec/cotas_conference-right-prof-alt.svg" alt="beaktor-cotas-conference-perfil-derecho">
 						<img class="d-sm-none right-prof" src="assets/img/vec/cotas_conference-right-prof.svg" alt="beaktor-cotas-conference-perfil-derecho">
                     </div>
-                    <div class="col-6 d-flex justify-content-center justify-content-sm-start work-col">
+                    <div class="col-6 d-flex justify-content-center justify-content-sm-start">
 						<img class="left-prof" src="assets/img/vec/cotas_conference-left-prof.svg" alt="beaktor-cotas-work-perfil-izquierdo">
 						<img class="front" src="assets/img/vec/cotas_conference-front.svg" alt="beaktor-cotas-work-frontal">
 						<img class="d-none d-sm-inline right-prof" src="assets/img/vec/cotas_conference-right-prof-alt.svg" alt="beaktor-cotas-work-perfil-derecho">
@@ -2785,12 +2785,12 @@
             <div class="col-2"></div>
             <div class="col-md-9 d-flex">
                 <div class="row w-100">
-                    <div class="col-6 conference-col">
+                    <div class="col-6">
                         <div class="btn-wrapper">
                             <a href="#"><button>Comprar</button></a>
                         </div>
                     </div>
-                    <div class="col-6 work-col">
+                    <div class="col-6">
                         <div class="btn-wrapper">
                             <a href="#"><button>Comprar</button></a>
                         </div>
@@ -2873,7 +2873,7 @@
               <div class="col">
                   <div class="row imgs-wrapper">
                       <div class="col-md-4 text-right">
-						  <img src="assets/img/beaktor_accesorios1.jpg" alt="beaktor-custom-1">
+						  <img class="w-100" src="assets/img/beaktor_accesorios1.jpg" alt="beaktor-custom-1">
 						  <div class="row btn-wrapper">
 							  <div class="col text-center">
 								<a href="#"><button>Comprar</button></a>
@@ -2881,7 +2881,7 @@
 						  </div>
                       </div>
                       <div class="col-md-4 text-center">
-						<img src="assets/img/beaktor_accesorios2.jpg" alt="beaktor-custom-1">
+						<img class="w-100" src="assets/img/beaktor_accesorios2.jpg" alt="beaktor-custom-1">
 						<div class="row btn-wrapper">
 							<div class="col text-center">
 							  <a href="#"><button>Comprar</button></a>
@@ -2889,7 +2889,7 @@
 						</div>
                     </div>
                     <div class="col-md-4 text-left">
-						<img src="assets/img/beaktor_accesorios3.jpg" alt="beaktor-custom-1">
+						<img class="w-100" src="assets/img/beaktor_accesorios3.jpg" alt="beaktor-custom-1">
 						<div class="row btn-wrapper">
 							<div class="col text-center">
 							  <a href="#"><button>Comprar</button></a>
@@ -2926,8 +2926,8 @@
     <div class="container">
       <div class="row">
         <div class="col text-center">
-          <a href="#">
-            <img class="back-up" src="assets/img/vec/arrow_up.svg" alt="volver-arriba">
+          <a id="scroll-up" href="#">
+            <img src="assets/img/vec/arrow_up.svg" alt="volver-arriba">
           </a>
         </div>
       </div>
@@ -3009,8 +3009,8 @@
   </footer>
   
 <!-- jQuery-->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
 <!-- Bootstrap JS -->
   <script src="assets/js/bootstrap.bundle.min.js"></script>
 
