--- a/configura.html
+++ b/configura.html
@@ -63,7 +63,7 @@
 		</div>
 	</nav>
 
-  <header class="hero">
+  <header class="hero bg-image">
     <div class="container h-100 p-0">
         <div class="row w-100 h-100 m-auto">
             <div class="col-md-10 col-lg-5 h-100 m-auto position-relative">
@@ -2970,7 +2970,7 @@
         <div class="col-sm-6 col-md-4 col-xl-2 text-center text-sm-left pt-3 pt-sm-0">
           <h2>SALA DE PRENSA</h2>
           <ul>
-            <li><a href="#">Blog</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="#">Noticias</a></li>
             <li><a href="#">Descargas</a></li>
           </ul>
