Adds link to /blog page in all footers

--- a/legal.html
+++ b/legal.html
@@ -155,7 +155,7 @@
         <div class="col-sm-6 col-md-4 col-xl-2 text-center text-sm-left pt-3 pt-sm-0">
           <h2>SALA DE PRENSA</h2>
           <ul>
-            <li><a href="#">Blog</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="#">Noticias</a></li>
             <li><a href="#">Descargas</a></li>
           </ul>
