Owl Carousel responsive styling

--- a/blog.html
+++ b/blog.html
@@ -103,11 +103,11 @@
                       <div class="owl-carousel owl-theme position-relative">
                         <div class="carousel-post">
                           <div class="img-wrapper position-relative">
-                            <img class="slide-img w-100" src="assets/img/blog-index-slide.jpg" alt="lorem-ipsum">
+                            <img class="slide-img" src="assets/img/blog-index-slide.jpg" alt="lorem-ipsum">
                             <div class="slide-text position-absolute w-100">
-                              <div class="row post-text">
+                              <div class="row main-post-text">
                                 <div class="col">
-                                  <h4 class="main-post-title">Lorem ipsum dolor sit amet, consectetuer</h4>
+                                  <h4 class="main-post-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui diam</h4>
                                 </div>
                               </div>
                               <div class="row main-post-meta">
@@ -123,9 +123,9 @@
                         </div>
                         <div class="carousel-post">
                           <div class="img-wrapper position-relative">
-                            <img class="slide-img w-100" src="assets/img/blog-index-slide.jpg" alt="lorem-ipsum">
+                            <img class="slide-img" src="assets/img/blog-index-slide.jpg" alt="lorem-ipsum">
                             <div class="slide-text position-absolute w-100">
-                              <div class="row post-text">
+                              <div class="row main-post-text">
                                 <div class="col">
                                   <h4 class="main-post-title">Sed diam nonummy nibhipiscing elit</h4>
                                 </div>
@@ -143,9 +143,9 @@
                         </div>
                         <div class="carousel-post">
                           <div class="img-wrapper position-relative">
-                            <img class="slide-img w-100" src="assets/img/blog-index-slide-2.jpg" alt="lorem-ipsum">
+                            <img class="slide-img" src="assets/img/blog-index-slide-2.jpg" alt="lorem-ipsum">
                             <div class="slide-text position-absolute w-100">
-                              <div class="row post-text">
+                              <div class="row main-post-text">
                                 <div class="col">
                                   <h4 class="main-post-title">Excepteur sint occaecat cupidatat non proident</h4>
                                 </div>
@@ -344,7 +344,7 @@
                 <div class="col">
                   <h3 class="module-title">Somos BEAKTOR</h3>
                   <p class="about-us-excerpt">BEAKTOR es la herramienta definitiva para la era del teletrabajo: toda tu oficina en un único mueble. Diseñado especialmente para incorporar todo el ambiente de trabajo o estudio a tu hogar con un simple movimiento de apertura, BEAKTOR favorece el orden y la concentración, repercutiendo positivamente en tu autoestima, motivación y capacidad productiva</p>
-                  <a href="#" class="read-more">Leer más</a>
+                  <a href="#" class="read-more-link">Leer más</a>
                 </div>
               </div>
               <div id="follow-us" class="row">
@@ -528,15 +528,15 @@
                 <div class="col">
                   <h3 class="module-title position-relative">Etiquetas</h3>
                   <div class="tags-wrapper">
-                    <a href="#" class="tag">Teletrabajo</a>
-                    <a href="#" class="tag">Hogar</a>
-                    <a href="#" class="tag">Trabajo</a>
-                    <a href="#" class="tag">Oficina</a>
-                    <a href="#" class="tag">Ergonomía</a>
-                    <a href="#" class="tag">Mobiliario</a>
-                    <a href="#" class="tag">Trabajo</a>
-                    <a href="#" class="tag">Oficina</a>
-                    <a href="#" class="tag">Decoración</a>
+                    <a href="#" class="tag-link">Teletrabajo</a>
+                    <a href="#" class="tag-link">Hogar</a>
+                    <a href="#" class="tag-link">Trabajo</a>
+                    <a href="#" class="tag-link">Oficina</a>
+                    <a href="#" class="tag-link">Ergonomía</a>
+                    <a href="#" class="tag-link">Mobiliario</a>
+                    <a href="#" class="tag-link">Trabajo</a>
+                    <a href="#" class="tag-link">Oficina</a>
+                    <a href="#" class="tag-link">Decoración</a>
                   </div>
                 </div>
               </div>
