Adds comment to /blog.html

--- a/blog.html
+++ b/blog.html
@@ -100,6 +100,7 @@
                 <section class="row">
                     <div class="col blog-module carousel-posts">
                       <h3 class="module-title">Últimas entradas</h3>
+                      <!-- Owl Carousel -->
                       <div class="owl-carousel owl-theme position-relative">
                         <div class="carousel-post">
                           <div class="img-wrapper position-relative">
@@ -161,7 +162,8 @@
                             </div>
                           </div>
                         </div>
-                      </div>        
+                      </div>
+                      <!-- / -->       
                     </div>
                 </section>
 
