Fixes broken nav tabs issue also @ /blog-detail.html

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -164,10 +164,10 @@
                 <!-- Nav Tabs -->
                   <ul class="nav nav-tabs" id="tabList" role="tablist">
                     <li class="nav-item">
-                      <h3 class="nav-tab"><a class="nav-link active" id="popular-tab" data-toggle="tab" href="#popular" role="tab" aria-controls="popular" aria-selected="true">POPULARES</a></h3>
+                      <a class="nav-link active" id="popular-tab" data-toggle="tab" href="#popular" role="tab" aria-controls="popular" aria-selected="true"><h3 class="nav-tab">POPULARES</h3></a>
                     </li>
                     <li class="nav-item">
-                      <h3 class="nav-tab"><a class="nav-link" id="recent-tab" data-toggle="tab" href="#recent" role="tab" aria-controls="recent" aria-selected="false">RECIENTES</a></h3>
+                      <a class="nav-link" id="recent-tab" data-toggle="tab" href="#recent" role="tab" aria-controls="recent" aria-selected="false"><h3 class="nav-tab">RECIENTES</h3></a>
                     </li>
                   </ul>
                   <!-- / -->
