--- a/contacto.html
+++ b/contacto.html
@@ -152,12 +152,12 @@
             <li><a href="#">FAQ</a></li>
           </ul>
         </div>
-        <div class="col-sm-6 col-md-4 col-xl-2 social d-flex mt-auto align-items-center justify-content-center justify-content-sm-end">
-          <a href="http://www.instagram.com/iambeaktor/" target="_blank" class="social-icon"><img src="assets/img/vec/instagram.svg" alt="Instagram"></a>
-          <a href="http://www.facebook.com/iambeaktor/" target="_blank" class="social-icon"><img src="assets/img/vec/facebook.svg" alt="Facebook"></a>
-          <a href="http://www.twitter.com/iambeaktor" target="_blank" class="social-icon"><img src="assets/img/vec/twitter.svg" alt="Twitter"></a>
-          <a href="http://www.linkedin.com/company/beaktor" target="_blank" class="social-icon"><img src="assets/img/vec/linkedin.svg" alt="Linkedin"></a>
-          <a href="http://www.medium.com/iambeaktor/" target="_blank" class="social-icon"><img src="assets/img/medium.png" alt="Medium"></a> 
+        <div class="col-sm-6 col-md-4 col-xl-2 mt-auto social">
+          <a href="http://www.instagram.com/iambeaktor/" target="_blank" class="social-icon"><img src="assets/img/vec/instagram-negative.svg" alt="Instagram"></a>
+          <a href="http://www.facebook.com/iambeaktor/" target="_blank" class="social-icon"><img src="assets/img/vec/facebook-negative.svg" alt="Facebook"></a>
+          <a href="http://www.twitter.com/iambeaktor" target="_blank" class="social-icon"><img src="assets/img/vec/twitter-negative.svg" alt="Twitter"></a>
+          <a href="http://www.linkedin.com/company/beaktor" target="_blank" class="social-icon"><img src="assets/img/vec/linkedin-negative.svg" alt="Linkedin"></a>
+          <a href="http://www.medium.com/iambeaktor/" target="_blank" class="social-icon"><img src="assets/img/medium-negative.png" alt="Medium"></a> 
         </div>
       </div>
       <div class="row footer-legal">
